cmake_minimum_required(VERSION 3.8)
project(dosgen)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        dosgen/trafgen/trafgen/trafgen_lexer.yy.c
        dosgen/trafgen/trafgen/trafgen_parser.tab.c
        dosgen/trafgen/trafgen/trafgen_parser.tab.h
        dosgen/trafgen/built_in.h
        dosgen/trafgen/colorize.h
        dosgen/trafgen/colors.h
        dosgen/trafgen/config.h
        dosgen/trafgen/cpp.c
        dosgen/trafgen/cpp.h
        dosgen/trafgen/cpus.h
        dosgen/trafgen/crypto.h
        dosgen/trafgen/csum.h
        dosgen/trafgen/dev.c
        dosgen/trafgen/dev.h
        dosgen/trafgen/die.c
        dosgen/trafgen/die.h
        dosgen/trafgen/ioops.c
        dosgen/trafgen/ioops.h
        dosgen/trafgen/irq.c
        dosgen/trafgen/irq.h
        dosgen/trafgen/link.c
        dosgen/trafgen/link.h
        dosgen/trafgen/linktype.h
        dosgen/trafgen/lockme.h
        dosgen/trafgen/mac80211.c
        dosgen/trafgen/mac80211.h
        dosgen/trafgen/privs.c
        dosgen/trafgen/privs.h
        dosgen/trafgen/proc.c
        dosgen/trafgen/proc.h
        dosgen/trafgen/ring.c
        dosgen/trafgen/ring.h
        dosgen/trafgen/ring_tx.c
        dosgen/trafgen/ring_tx.h
        dosgen/trafgen/sig.c
        dosgen/trafgen/sig.h
        dosgen/trafgen/sock.c
        dosgen/trafgen/sock.h
        dosgen/trafgen/str.c
        dosgen/trafgen/str.h
        dosgen/trafgen/sysctl.c
        dosgen/trafgen/sysctl.h
        dosgen/trafgen/timer.c
        dosgen/trafgen/timer.h
        dosgen/trafgen/tprintf.c
        dosgen/trafgen/tprintf.h
        dosgen/trafgen/trafgen.c
        dosgen/trafgen/trafgen_conf.h
        dosgen/trafgen/trafgen_l2.c
        dosgen/trafgen/trafgen_l2.h
        dosgen/trafgen/trafgen_l3.c
        dosgen/trafgen/trafgen_l3.h
        dosgen/trafgen/trafgen_l4.c
        dosgen/trafgen/trafgen_l4.h
        dosgen/trafgen/trafgen_proto.c
        dosgen/trafgen/trafgen_proto.h
        dosgen/trafgen/trafgen_stddef.h
        dosgen/trafgen/xmalloc.c
        dosgen/trafgen/xmalloc.h
        dosgen/argsParse.c
        dosgen/argsParse.cpp
        dosgen/argsParse.h
        dosgen/dosgen.c
        dosgen/httpFlood.cpp
        dosgen/httpFlood.h
        dosgen/libdos.h
        dosgen/rudy.cpp
        dosgen/rudy.h
        dosgen/slowloris.cpp
        dosgen/slowloris.h
        dosgen/slowRead.cpp
        dosgen/slowRead.h
        dosgen/sshPass.c
        dosgen/sshPass.h
        dosgen/trafgen_configs.h
        dosgen/trafgen_wrapper.c
        dosgen/trafgen_wrapper.h
        dosgen/trafgenlib.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_callbacks.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_callbacks_12_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_callbacks_pre_12_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_converters.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_converters_43_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_converters_pre_43_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_implementation_12_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_implementation_pre_12_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_maybe_43_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_maybe_pre_43_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_new.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_object_wrap.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_persistent_12_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_persistent_pre_12_inl.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_string_bytes.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_typedarray_contents.h
        dosgenweb/node_modules/onoff/node_modules/epoll/node_modules/nan/nan_weak.h
        dosgenweb/node_modules/onoff/node_modules/epoll/src/epoll.cc
        dosgenweb/node_modules/onoff/node_modules/epoll/src/epoll.h)

add_executable(dosgen ${SOURCE_FILES})